// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Conditionals Renders list 1`] = `
<div
  className="caldera-editor-conditions-panel"
  style={
    Object {
      "marginBottom": "32px",
    }
  }
>
  <ul
    className="active-conditions-list"
  >
    <li
      className="caldera-condition-nav undefined caldera-forms-condition-group condition-point-con_3840644613791445"
    >
      <a
        className="condition-open-group"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <span
          id="condition-group-con_3840644613791445"
        >
          
        </span>
        <span
          className="condition-line-number"
        />
      </a>
    </li>
    <li
      className="caldera-condition-nav undefined caldera-forms-condition-group condition-point-con_3156693554561454"
    >
      <a
        className="condition-open-group"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <span
          id="condition-group-con_3156693554561454"
        >
          
        </span>
        <span
          className="condition-line-number"
        />
      </a>
    </li>
    <li
      className="caldera-condition-nav undefined caldera-forms-condition-group condition-point-con_8761120514939434"
    >
      <a
        className="condition-open-group"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <span
          id="condition-group-con_8761120514939434"
        >
          
        </span>
        <span
          className="condition-line-number"
        />
      </a>
    </li>
  </ul>
  <button
    className="button"
    id="new-conditional"
    onClick={[Function]}
    style={
      Object {
        "width": "250px",
      }
    }
    type="button"
  >
    New Conditional
  </button>
</div>
`;

exports[`Conditionals Renders new conditional button 1`] = `
<button
  className="button"
  id="new-conditional"
  onClick={[Function]}
  style={
    Object {
      "width": "250px",
    }
  }
  type="button"
>
  New
</button>
`;
